locale/de/ update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@7119 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/de/foxtrick.properties
+++ b/content/locale/de/foxtrick.properties
@@ -695,14 +695,13 @@ CopyRatings.home=Ratings der Heimmannschaft kopieren (in HT-ML)
 CopyRatings.away=Ratings der Auswärtsmannschaft kopieren (in HT-ML)
 CopyRatings.copied=Die Ratings wurden in die Zwischenablage kopiert.
 
-CopyYouth.title=Jugendkopierfunktionen
 CopyYouth.trainingReport=Kopiere Trainingsreport
 CopyYouth.trainingReport.copied=Trainingsreport wurde in die Zwischenablage kopiert.
 CopyYouth.scoutComment=Scoutbericht kopieren
 CopyYouth.scoutComment.copied=Der Scoutbericht wurde in die Zwischenablage kopiert.
 CopyYouth.playerSource=Kopiere HTML Quellcode
 CopyYouth.playerSource.copied=HTML Quellcode wurde in die Zwischenablage kopiert
-CopyYouthCopyYouth.fixturesSource=Kopiere HTML Quellcode
+CopyYouth.fixturesSource=Kopiere HTML Quellcode
 CopyYouth.fixturesSource.copied=HTML Quellcode wurde in die Zwischenablage kopiert.
 CopyYouth.goto=Gehe zu %s
 
@@ -978,7 +977,6 @@ foxtrick.prefs.captionHTCountry=Ländereinstellung
 foxtrick.prefs.captionCleanupBranch=Gespeicherte Daten
 foxtrick.prefs.captionLoadSavePrefs=Einstellungen exportieren oder laden
 foxtrick.prefs.labelCleanupBranch=FoxTrick-Einstellungen zurücksetzen (nur die normalen Einstellungen, persönliche Anpassungen werden nicht zurückgesetzt, Neustart erforderlich)
-
 foxtrick.prefs.labelDisableAll=Deaktivieren aller FoxTrick Module
 foxtrick.prefs.labelSavePrefs=Foxtrickeinstellungen exportieren
 foxtrick.prefs.labelSavePrefs_Prefs=Exportiere FoxTrick-Einstellungen
@@ -993,7 +991,7 @@ foxtrick.prefs.saved=Einstellungen gespeichert!
 foxtrick.prefs.loaded=Einstellungen geladen!
 foxtrick.prefs.dismissNotice=(Klicke um diese Notiz zu verbergen)
 
-pref.xmlLoad=Lade XMLs für Zusatzinformationen van Hattrick
+pref.xmlLoad=Lade XMLs für Zusatzinformationen von Hattrick
 
 link.title=Links
 link.homepage=Homepage
@@ -1008,17 +1006,16 @@ foxtrick.showReleaseNotes=Anzeige der Release Notes nach einem FoxTrick-Update
 foxtrick.versionReleaseNotes=Anzeige der Release Notes für:
 
 about.copyright=Copyright
-about.headDevelopers=Head Developers
-about.projectOwners=Project Owners
-about.developers=Developers
-about.translators=Translators
-about.designers=Designers
+about.maintainers=Projektübersicht
+about.developers=Entwickler
+about.translators=Übersetzer
+about.designers=Designer
 
 prefs.view.by.category=Nach Kategorie
-prefs.view.by.page=Nach letzte HT-Seite
+prefs.view.by.page=Nach letzter HT-Seite
 
-delete_foxtrick_branches_ask=Wirklich alle Einstellungen zurücksetzen?\n FireFox muss danach neu gestartet werden!
-disable_all_foxtrick_modules_ask=Sollen wirklich alle Module deaktiviert werden?\n
+delete_foxtrick_branches_ask=Wirklich alle Einstellungen zurücksetzen?  FireFox muss danach neu gestartet werden!
+disable_all_foxtrick_modules_ask=Sollen wirklich alle Module deaktiviert werden?
 
 foxtrick.prefs.AdditionalOptions=Erweiterte Einstellungen
 foxtrick.prefs.smallcopyicons=Kleine Copyicons anstelle von einer extra Box
