--- a/content/locale/sr/release-notes.xml
+++ b/content/locale/sr/release-notes.xml
@@ -30,6 +30,10 @@
 <item>Опција за убацивање 'FoxTrick debug' лога у модулу <module>ForumYouthIcons</module>. (convincedd)</item>
 <item>Опција за означавање тимова коју су заказали пријатељски меч на страници лиге у модулу <module>ShowFriendlyBooked</module>, укључена аутоматски. (convincedd)</item>
 <item>Линк за приказивање додатних информација о играчима у модулу <module>SkillTable</module>. (convincedd)</item>
+<item>У Фајерфоксу Фокстрик иконица је пребачена у горњи мени. (ryanli)</item>
+<item>У верзији за 'Chrome' Фокстрик иконица је унутар адресне траке. Такође, треперење је уклоњено и брзина знатно унапређена. (convincedd)</item>
+<item>Фокстрик ради и на прегледнику 'Fennec' (Фајерфокс за мобилне). (convincedd)</item>
+<item>Фокстрик ради и на прегледницима 'Opera' и 'Safari'. (convincedd, ryanli)</item>
 <item>Још неке ситне поправке и побољшања. (convincedd, ryanli)</item>
 </note>
 
