--- a/content/locale/de/release-notes.xml
+++ b/content/locale/de/release-notes.xml
@@ -32,8 +32,8 @@
 <item>Link um Zusatzinformationen Ã¼ber Spieler zu laden im Modul <module>SkillTable</module>. (convincedd)</item>
 <item>In Firefox wurde das FoxTrick-Icon in die Toolbar versetzt. (ryanli)</item>
 <item>In Chrome wurde das FoxTrick-Icon in die Adressbar versetzt. Des weiteren wurde das Flickern entfernt und die Geschwindigkeit verbessert (convincedd)</item>
-<item>FoxTrick aktiviert für Fennec/Firefox for mobile. (convincedd)</item>
-<item>FoxTrick jetzt für erhältlich Opera und Safari. (convincedd, ryanli)</item>
+<item>FoxTrick aktiviert fÃ¼r Fennec/Firefox for mobile. (convincedd)</item>
+<item>Beta-Versionen von FoxTrick jetzt fÃ¼r erhÃ¤ltlich Opera und Safari. (convincedd, ryanli)</item>
 <item>Weitere kleinere Fehlerbehebungen und Verbesserungen. (convincedd, ryanli)</item>
 </note>
 
