Serbian Translation update + release notes
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@7132 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/sr/foxtrick.properties
+++ b/content/locale/sr/foxtrick.properties
@@ -352,7 +352,7 @@ foxtrick.MarkAllAsRead.desc=Дугме за означавање свих тем
 foxtrick.ShowFriendlyBooked.desc=Прикажи на страници лиге тимове који су заказали пријатељску утакмицу
 foxtrick.ShowFriendlyBooked.OnDemand.desc=Приказуј само на изричит захтев
 foxtrick.TickerAlert.desc=Покажи обавештење кад год се појави нова информација у тикеру. Да искључите звучно обавештење, поље за адресу звучног фајла оставите празно.
-foxtrick.SupporterStatsEnhancements.desc=Оѕначава играче који су још увек у клубу на страници супортер статистике
+foxtrick.SupporterStatsEnhancements.desc=Означава играче који су још увек у клубу на страници супортер статистике
 foxtrick.MobileEnhancements.desc=Побољшања за мобилне телефоне
 
 # -----------------------------------------------------------------------------
