preferences: added option to delete OAuth token/secret
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@7133 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/ar/foxtrick.properties
+++ b/content/locale/ar/foxtrick.properties
@@ -4,10 +4,12 @@
 
 # Hints:
 # translate the right side of the = sign.
-# don't use " in your translations.
 # the left side are idenitifiers for internal foxtrick use. leave them unchanged.
 # sentences starting with # are comments. leave them unchanged
 
+# Text with %-sign eg %s will be automatically replaced by the approriate text. 
+# Eg in "The price is %s." %s will be replaced by the selected amount of money. 
+# Thus, you need to include those %s entries into your text accordingly
 
 # Module descriptions
 # WARNING: your module description has to have the name foxtrick.MODULE_NAME.desc
@@ -341,6 +343,7 @@ foxtrick.ShowLineupSet.LineupSet.desc=Highlight teams that have set a lineup
 foxtrick.ShowLineupSet.Ownerless.desc=Highlight ownerless teams
 foxtrick.ShowLineupSet.Winning.desc=Highlight winning teams
 foxtrick.SupporterStatsEnhancements.desc=Highlights current squad players in supporter stats
+
 
 # -----------------------------------------------------------------------------
 
@@ -902,6 +905,12 @@ sort.down=Down
 action.clearCache=Clear cache
 action.clearCache.title=Clears FoxTricks Xml cache. FoxTrick downsloads extra information from Hattrick's servers on demand. Untill you close your browser, FoxTrick will use locally stored copies of those afterwards. On rare occasions they can get outdated. Clear the cache if you want FoxTrick to download those extra informations again.
 
+
+
+
+
+
+
 # buttons
 button.ok=OK
 button.cancel=Cancel
@@ -916,10 +925,11 @@ button.authorize=Authorize
 button.export=Export
 button.import=Import
 button.restoreDefault=Restore default
+button.deleteToken=Delete token
 button.disableAll=Disable all
 
-status.loading=Loadingâ€¦
-status.loading.abbr=â€¦
+status.loading=Loading…
+status.loading.abbr=…
 status.error=Error
 status.error.abbr=!
 status.unknown=Unknown
@@ -957,7 +967,7 @@ prefs.screenshot=Screenshot
 # tabs in preferences page
 #tabs
 tab.main=Main
-tab.on_page=Page modules
+tab.on_page=Modules on this page
 tab.universal=Universal modules
 tab.informationAggregation=Information Aggregation
 tab.shortcutsAndTweaks=Shortcuts and Tweaks
@@ -978,6 +988,8 @@ foxtrick.prefs.captionHTCountry=Country
 foxtrick.prefs.captionCleanupBranch=Stored preferences
 foxtrick.prefs.captionLoadSavePrefs=Export or import preferences
 foxtrick.prefs.labelCleanupBranch=Restore default preferences (Only preferences, no personal settings.)
+# note to translators: the %here will be automatically converted into a link to chpp settings. The % sign gets removed, making 'here' the clickable link.
+foxtrick.prefs.labelDeleteToken=Delete OAuth token/secret. This will remove the access to Hattrick's CHPP files of this FoxTrick copy only. If you want to revoke FoxTrick's accesss entirely, use Hattrick's CHPP management %here. 
 foxtrick.prefs.labelDisableAll=Disable all modules
 foxtrick.prefs.labelSavePrefs=Export preferences and/or personal settings
 foxtrick.prefs.labelSavePrefs_Prefs=Preferences
@@ -1007,16 +1019,16 @@ foxtrick.showReleaseNotes=Show release notes after FoxTrick updates
 foxtrick.versionReleaseNotes=Show release notes for:
 
 about.copyright=Copyright
-about.headDevelopers=Head Developers
-about.projectOwners=Project Owners
+about.maintainers=Maintainers
 about.developers=Developers
 about.translators=Translators
 about.designers=Designers
 
-prefs.view.by.category=By categories
-prefs.view.by.page=By last HT page
+prefs.view.by.category=View by category
+prefs.view.by.page=View by last HT page
 
 delete_foxtrick_branches_ask=Are you sure you want to restore to default settings?
+delete_oauth_ask=Delete OAuth token/secret? 
 disable_all_foxtrick_modules_ask=Are you sure you want to disable all modules?
 
 foxtrick.prefs.AdditionalOptions=Additional options
