--- a/content/locale/de/foxtrick.properties
+++ b/content/locale/de/foxtrick.properties
@@ -7,6 +7,9 @@
 # the left side are idenitifiers for internal foxtrick use. leave them unchanged.
 # sentences starting with # are comments. leave them unchanged
 
+# Text with %-sign eg %s will be automatically replaced by the approriate text. 
+# Eg in "The price is %s." %s will be replaced by the selected amount of money. 
+# Thus, you need to include those %s entries into your text accordingly
 
 # Module descriptions
 # WARNING: your module description has to have the name foxtrick.MODULE_NAME.desc
@@ -340,6 +343,7 @@ foxtrick.ShowLineupSet.LineupSet.desc=Hervorheben von gesetzten Aufstellungen
 foxtrick.ShowLineupSet.Ownerless.desc=Hervorheben von Vereinen ohne Besitzer
 foxtrick.ShowLineupSet.Winning.desc=Hervorheben von Gewinners
 foxtrick.SupporterStatsEnhancements.desc=Markierung für Spieler des aktuellen Teams in den Supporterstatistiken
+
 
 # -----------------------------------------------------------------------------
 
@@ -901,6 +905,12 @@ sort.down=Runter
 action.clearCache=Cache leeren
 action.clearCache.title=Leert FoxTricks eigenen Xml-Cache. FoxTrick läd bei Bedarf zusätzliche Informationen von Hattricks Servern. Bis zum nächsten Neustart des Browsers benutzt FoxTrick lokal gespeicherte Kopien dieser Daten. Gelegendlich können diese nicht mehr aktuell sein. Lösche den Cache, falls FoxTrick die Zusatzdaten erneut laden soll.
 
+
+
+
+
+
+
 # buttons
 button.ok=OK
 button.cancel=Abbrechen
@@ -915,6 +925,7 @@ button.authorize=Autorisieren
 button.export=Exportiere
 button.import=Importiere
 button.restoreDefault=Standard wiederherstellen
+button.deleteToken=Lösche Token
 button.disableAll=Alles deaktivieren
 
 status.loading=Lade…
@@ -977,6 +988,8 @@ foxtrick.prefs.captionHTCountry=Ländereinstellung
 foxtrick.prefs.captionCleanupBranch=Gespeicherte Daten
 foxtrick.prefs.captionLoadSavePrefs=Einstellungen exportieren oder laden
 foxtrick.prefs.labelCleanupBranch=FoxTrick-Einstellungen zurücksetzen (nur die normalen Einstellungen, persönliche Anpassungen werden nicht zurückgesetzt, Neustart erforderlich)
+# note to translators: the %here will be automatically converted into a link to chpp settings. The % sign gets removed, making 'here' the clickable link.
+foxtrick.prefs.labelDeleteToken=OAuth Token/Secret löschen. Dies entfernt den Zugang zu den Hattrick CHPP Dateien nur von dieser Kopie von FoxTrick. Falls du FoxTricks Zugang völlig löschen willst, benutze Hattricks CHPP-Management %hier. 
 foxtrick.prefs.labelDisableAll=Deaktivieren aller FoxTrick Module
 foxtrick.prefs.labelSavePrefs=Foxtrickeinstellungen exportieren
 foxtrick.prefs.labelSavePrefs_Prefs=Exportiere FoxTrick-Einstellungen
@@ -1006,7 +1019,7 @@ foxtrick.showReleaseNotes=Anzeige der Release Notes nach einem FoxTrick-Update
 foxtrick.versionReleaseNotes=Anzeige der Release Notes für:
 
 about.copyright=Copyright
-about.maintainers=Projektübersicht
+about.maintainers=Projektmanagement
 about.developers=Entwickler
 about.translators=Übersetzer
 about.designers=Designer
@@ -1015,6 +1028,7 @@ prefs.view.by.category=Nach Kategorie
 prefs.view.by.page=Nach letzter HT-Seite
 
 delete_foxtrick_branches_ask=Wirklich alle Einstellungen zurücksetzen?  FireFox muss danach neu gestartet werden!
+delete_oauth_ask=OAuth Token/Secret löschen? 
 disable_all_foxtrick_modules_ask=Sollen wirklich alle Module deaktiviert werden?
 
 foxtrick.prefs.AdditionalOptions=Erweiterte Einstellungen
