Serbian Translation update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@7135 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/sr/foxtrick.properties
+++ b/content/locale/sr/foxtrick.properties
@@ -8,6 +8,10 @@
 # the left side are idenitifiers for internal foxtrick use. leave them unchanged.
 # sentences starting with # are comments. leave them unchanged
 
+# Text with %-sign eg %s will be automatically replaced by the approriate text. 
+# Eg in "The price is %s." %s will be replaced by the selected amount of money. 
+# Thus, you need to include those %s entries into your text accordingly
+
 # Module descriptions
 # WARNING: your module description has to have the name foxtrick.MODULE_NAME.desc
 foxtrick.LineupShortcut.desc=Додаје директан линк ка постави на страници играча.
@@ -968,6 +972,7 @@ button.close=Затвори
 button.add=Додај
 button.remove=Уклони
 button.authorize=Дозволи
+button.deleteToken=Обриши токен за ауторизацију
 button.top=Иди на врх
 
 
@@ -1026,6 +1031,8 @@ foxtrick.prefs.captionHTLanguage=Подешавање језика
 foxtrick.prefs.captionHTDateformat=Подешавање формата датума
 foxtrick.prefs.captionHTCountry=Подешавање за државу
 foxtrick.prefs.captionCleanupBranch=Сачувана подешавања
+# note to translators: the %here will be automatically converted into a link to chpp settings. The % sign gets removed, making 'here' the clickable link.
+foxtrick.prefs.labelDeleteToken=Обриши 'OAuth' токен. Ово ће уклонити приступ само ове копије Фокстрика CHPP фајловима на Хеттрику. Уколико желите да у потпуности укинете ауторизацију за Фокстрик, користите страницу за управљање CHPP производима %овде. 
 foxtrick.prefs.captionLoadSavePrefs=Увези или Извези подешавања
 #statusbarpref
 foxtrick.prefs.captionAlertSettings=Подешавање за обавештења
@@ -1082,7 +1089,7 @@ prefs.view.by.page=Само модули на страници
 
 disable_all_foxtrick_modules_ask=Заиста желите да искључите све Фокстрик модуле?
 delete_foxtrick_branches_ask=Да ли сте сигурни да желите да обришете сва подешавања?
-
+delete_oauth_ask=Да ли желите да обришете 'OAuth' токен? 
 foxtrick.prefs.AdditionalOptions=Додатне опције
 foxtrick.prefs.copyfeedback=Прикажи дијалог за потврду после коришћења опција 'ископирај у меморију'
 foxtrick.prefs.smallcopyicons=Убаци мале иконице за копирање у заглавље уместо посебног менија са стране
