preferences: select teamid for deleting oauth token
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@7139 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/ar/foxtrick.properties
+++ b/content/locale/ar/foxtrick.properties
@@ -989,7 +989,7 @@ foxtrick.prefs.captionCleanupBranch=Stored preferences
 foxtrick.prefs.captionLoadSavePrefs=Export or import preferences
 foxtrick.prefs.labelCleanupBranch=Restore default preferences (Only preferences, no personal settings.)
 # note to translators: the %here will be automatically converted into a link to chpp settings. The % sign gets removed, making 'here' the clickable link.
-foxtrick.prefs.labelDeleteToken=Delete OAuth token/secret. This will remove the access to Hattrick's CHPP files of this FoxTrick copy only. If you want to revoke FoxTrick's accesss entirely, use Hattrick's CHPP management %here. 
+foxtrick.prefs.labelDeleteToken=Delete OAuth token/secret for the selected teamid. This will remove the teams access to Hattrick's CHPP files of this FoxTrick copy only. If you want to revoke FoxTrick's access for a team entirely, use Hattrick's CHPP management %here. 
 foxtrick.prefs.labelDisableAll=Disable all modules
 foxtrick.prefs.labelSavePrefs=Export preferences and/or personal settings
 foxtrick.prefs.labelSavePrefs_Prefs=Preferences
