--- a/content/locale/de/foxtrick.properties
+++ b/content/locale/de/foxtrick.properties
@@ -989,7 +989,7 @@ foxtrick.prefs.captionCleanupBranch=Gespeicherte Daten
 foxtrick.prefs.captionLoadSavePrefs=Einstellungen exportieren oder laden
 foxtrick.prefs.labelCleanupBranch=FoxTrick-Einstellungen zurücksetzen (nur die normalen Einstellungen, persönliche Anpassungen werden nicht zurückgesetzt, Neustart erforderlich)
 # note to translators: the %here will be automatically converted into a link to chpp settings. The % sign gets removed, making 'here' the clickable link.
-foxtrick.prefs.labelDeleteToken=OAuth Token/Secret löschen. Dies entfernt den Zugang zu den Hattrick CHPP Dateien nur von dieser Kopie von FoxTrick. Falls du FoxTricks Zugang völlig löschen willst, benutze Hattricks CHPP-Management %hier. 
+foxtrick.prefs.labelDeleteToken=OAuth Token/Secret der gewählten Vereinsid löschen. Dies entfernt den Zugang des Vereins zu den Hattrick CHPP Dateien für diese Kopie von FoxTrick. Falls du FoxTricks Zugang für einen Versin vollständig löschen willst, benutze Hattricks CHPP-Management %hier. 
 foxtrick.prefs.labelDisableAll=Deaktivieren aller FoxTrick Module
 foxtrick.prefs.labelSavePrefs=Foxtrickeinstellungen exportieren
 foxtrick.prefs.labelSavePrefs_Prefs=Exportiere FoxTrick-Einstellungen
@@ -1028,7 +1028,7 @@ prefs.view.by.category=Nach Kategorie
 prefs.view.by.page=Nach letzter HT-Seite
 
 delete_foxtrick_branches_ask=Wirklich alle Einstellungen zurücksetzen?  FireFox muss danach neu gestartet werden!
-delete_oauth_ask=OAuth Token/Secret löschen? 
+delete_oauth_ask=OAuth Token/Secret der Vereinsid %s löschen? 
 disable_all_foxtrick_modules_ask=Sollen wirklich alle Module deaktiviert werden?
 
 foxtrick.prefs.AdditionalOptions=Erweiterte Einstellungen
