opera/safari: copy functions with Ctrl+V from textarea in copynotes feedback
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@7143 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/de/foxtrick.properties
+++ b/content/locale/de/foxtrick.properties
@@ -709,7 +709,7 @@ CopyYouth.fixturesSource=Kopiere HTML Quellcode
 CopyYouth.fixturesSource.copied=HTML Quellcode wurde in die Zwischenablage kopiert.
 CopyYouth.goto=Gehe zu %s
 
-PasteClick.desc=Einfügen mit Umschalt+Linke Mausetaste
+PasteClick.desc=Auswahl mit Strg+V kopieren.
 
 foxtrick.tweaks.youthclub=hattrick-youthclub.org
 foxtrick.tweaks.copyskilltable=Skilltabelle in die Zwischenablage kopieren (HT Forum Style)
