--- a/content/locale/ar/foxtrick.properties
+++ b/content/locale/ar/foxtrick.properties
@@ -709,7 +709,7 @@ CopyYouth.fixturesSource=نسخ مصدر المباريات
 CopyYouth.fixturesSource.copied=تم نسخ مصدر المباريات.
 CopyYouth.goto=التوجه إلى %s
 
-PasteClick.desc=النسخ باستخدام زر SHIFT + انقر زر الفأرة الأيسر
+CopySelected.desc=Copy selection with Ctrl+V.
 
 foxtrick.tweaks.youthclub=hattrick-youthclub.org
 foxtrick.tweaks.copyskilltable=نسخ جدول المهارات إلى الحافظة (بصيغة HT-ML)
