Serbian Translation update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@7145 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/sr/foxtrick.properties
+++ b/content/locale/sr/foxtrick.properties
@@ -757,7 +757,7 @@ CopyYouth.playerSource.copied=Изворни код играча је ископ
 CopyYouth.fixturesSource=Копирај изворни код за мечеве
 CopyYouth.fixturesSource.copied=Изворни код за мечеве је ископиран у меморију.
 CopyYouth.goto=Иди на %s
-PasteClick.desc=Paste(SHIFT+ЛЕВИ КЛИК МИШЕМ)
+CopySelected.desc=Копирај селектовано са Ctrl+V
 
 foxtrick.tweaks.youthclub=hattrick-youthclub.org
 foxtrick.tweaks.copyskilltable=Копирај табелу са вештинама у меморију (у ХТ форум стилу)
